<resources>
    <string name="app_name">FlexyP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgort_password">Forgot Password ?</string>
    <string name="sign_in">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="nav_header_title">USERNAME</string>
    <string name="send_sms_message">Send sms code</string>
    <string name="send_sms">Send Sms</string>
    <string name="get_code">Get Code</string>
    <string name="name">Full Name</string>
    <string name="codepin">Code Pin</string>
    <string name="sign_up">Register</string>
    <string name="verify">Verify</string>
    <string name="code_verification">Code Verification</string>
    <string name="resend">Resend Code</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="you_have_a_account_please_log_in">You have a account ? Please log in</string>
    <string name="you_don_t_have_a_account_please_register">You don\'t have a account . Please Register</string>
    <string name="email">Email</string>
    <string name="check_code">Check Code</string>
    <string name="update_image">Update Image</string>
    <string name="rm">Recharge Mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bs">Bein Sport</string>
    <string name="gf">Gift Card</string>
    <string name="hint_phone_number">0550000000</string>
    <string name="hint_password">************</string>
    <string name="djezzy">Djezzy</string>
    <string name="mobilis">Mobilis</string>
    <string name="ooredoo">Ooredoo</string>
    <string name="price">Price</string>
    <string name="put_money_in_your_wallet">Put Money In Your Wallet</string>
    <string name="cancel">Cancel</string>
    <string name="send_with_messenger">Send With Messenger</string>
    <string name="send_with_paypal">Send With Paypal</string>
    <string name="send_with_email">Send With Email</string>
    <string name="empty_items">Empty Items</string>
    <string name="total">Total :</string>
    <string name="my_wallet">My Wallet :</string>
    <string name="buy">Buy</string>
    <string name="request">Request</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_price">Offer Price</string>
    <string name="add_offer">Add OFFER</string>
    <string name="your_order">Your ORDER</string>
</resources>
