<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/put_money"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/put_money_in_your_wallet" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:iconTint="@android:color/white"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_request"
            android:iconTint="@android:color/white"
            android:title="@string/request" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/logout" />
    </group>

</menu>
