<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/codeSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_verification"
            app:met_maxCharacters="6"
            app:met_minCharacters="6" />

        <Button
            android:id="@+id/verifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <Button
            android:id="@+id/resendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend" />
    </LinearLayout>

</androidx.cardview.widget.CardView>