<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient"
            android:contentDescription="@null" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@null" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageVIew"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_white"
        android:orientation="vertical"
        android:padding="20dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhoneUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@android:color/white"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_minCharacters="3"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNameUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="3"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPasswordUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="3"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtCodePin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codepin"
            android:inputType="number"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="4"
            app:met_minCharacters="2"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInput"
        android:layout_marginTop="16dp"
        android:background="@drawable/rec_gradient"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:contentDescription="@null"
        android:padding="5dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/linkToSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignUP"
        android:layout_margin="8dp"
        android:text="@string/you_have_a_account_please_log_in"
        android:textColor="@android:color/black" />
</RelativeLayout>
